<resources>
    <string name="app_name">Notifictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_text_to_translate">Type To Translate</string>
    <string name="add_to_learn">Add to Learn list</string>
    <string name="add_to_selected_category">Add to selected board</string>
    <string name="blind_swap_language">Swap Languages</string>
    <string name="api_key_depricated">Api depricated</string>
    <string name="exceed_daily_translate">Cannot translate now</string>
    <string name="text_size_error">Text is too large for translation</string>
    <string name="cannot_translate">Error in Translate</string>
    <string name="translate_not_supported">Developer Error</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_noConnection">No Internet connection</string>
    <string name="error_timeout">Request timed out</string>
    <string name="error_server">Translate server not available</string>
    <string name="error_network">Network Error</string>
    <string name="title_target">Translate to</string>
    <string name="title_source">Translate from</string>
    <string name="filter">Filter</string>
    <string name="correct_count">Correct count</string>
    <string name="wrong_count">Wrong count</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="correct_answer_is">Answere is:</string>
    <string name="error_create_quiz">You must add at least 4 words to learning list</string>
    <string name="notifictionary_is_active">Notifictionary is Active</string>
    <string name="close_notification">Stop</string>
    <string name="question_description">Guess the meaning</string>
    <string name="wrong">WRONG</string>
    <string name="correct">CORRECT</string>
    <string name="no_more_question">No more questions</string>
    <string name="pick_color">Pick a color</string>
    <string name="select">SELECT</string>
    <string name="title_duplicated">Word Already Exists</string>
    <string name="description_duplicated">Word %s already Exists in Learn list\ndo you want to add it again?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="enter_name">Please Enter file name</string>
    <string name="hint_file_name">File name</string>
    <string name="word">Word</string>
    <string name="translate">Translate</string>
    <string name="hint_optional">Hint(Optional)</string>
    <string name="edit">Edit</string>
    <string name="edit_title">Edit Word</string>
    <string name="enter_category_name">Please Enter board name</string>
    <string name="hint_category_name">Category</string>
    <string name="period_time">Time between reminders</string>
    <string name="about_us">About Us</string>
    <string name="about_us_desc">Notifictionary is created to help People who want to learn specific Language or Words or etc. this app will notify user repeatedly during the day &amp; randomly show one of the words you already inserted. Sometimes app will ask you a word to see if you learned that word or not.</string>
    <string name="title_activity_assay">Challenge your knowledge</string>
    <string name="title_result">Result of Quiz</string>
    <string name="color_not_selected">No Color Selected</string>
    <string name="error_file_name">Please enter a file name</string>
    <string name="error_already_exists">Already Exists</string>
    <string name="close">Close</string>
    <string name="all">ALL</string>
    <string name="service_permission">ir.shahinsoft.notifictionary.service.PERMISSION</string>
    <string name="error_empty">This fields is required</string>
    <string name="label_limit">Memorize Limit (num)</string>
    <string name="more">more</string>
    <string name="none" />
    <string name="remove">Remove</string>
    <string name="move">Move</string>
    <string name="delete_title">Delete word</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_description_format">Do you really want to delete %s ?</string>
    <string name="word_is_empty">Word is empty</string>
    <string name="translate_empty">Translate is empty</string>
    <string name="undo">Undo</string>
    <string name="add_message_format">%s added to %s</string>
    <string name="favorite">Favorite</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="title_category">Categories</string>
    <string name="history">Copy History</string>
    <string name="import_txt">Import</string>
    <string name="export">Export</string>
    <string name="telegram_channel">Telegram channel</string>
    <string name="category_deleted">Category Deleted!</string>
    <string name="title_remove_category">Remove Category</string>
    <string name="content_remove_category">Do you really want to delete this board? \nAll words inside it will be deleted</string>
    <string name="add">Add</string>
    <string name="select_back_up_file">Select backup file</string>
    <string name="export_done">Export completed</string>
    <string name="please_wait">Please wait</string>
    <string name="loading_words">Loading words</string>
    <string name="msg_words_saved">Words imported to database</string>
    <string name="title_import">Import</string>
    <string name="title_export">Export</string>
    <string name="select_all">Select all</string>
    <string name="diselect">Disselect all</string>
    <string name="error_read_file">Error : file may not be notifictionary backup file</string>
    <string name="unselect">DISSELECT</string>
    <string name="notification_cycle">Notification Time</string>
    <string name="memorize_limit">Memorize limit</string>
    <string name="correct_answer_goal">Correct Answer goal</string>
    <string name="theme">Theme</string>
    <string name="notification_sound">Notification sound</string>
    <string name="notification_vibrate">Notification vibrate</string>
    <string name="notification_settings">Notification settings</string>
    <string name="translate_everywhere">Translate everywhere</string>
    <string name="save_history">Save Translated words</string>
    <string name="help">Help</string>
    <string name="license">License</string>
    <string name="qa"><![CDATA[Q&A]]></string>
    <string name="title_help">Help</string>
    <string name="title_license">License</string>
    <string name="speak_speed">Speack speed</string>
    <string name="speech">Speech</string>
    <string name="expand">expand</string>
    <string name="options">options</string>
    <string name="contact_to_developer">Developed by Shayan Darvish pour</string>
    <string name="social_media">Social Media</string>
    <string name="telegram_account">Developer telegram account</string>
    <string name="instagram_account">Developer Instagram account</string>
    <string name="twitter_account">Developer twitter account</string>
    <string name="gmail_account">Send Email to developer</string>
    <string name="close_about_activity">Close about activity</string>
    <string name="seen">Mark as read</string>
    <string name="replace">Replace</string>
    <string name="theme_red">Theme red</string>
    <string name="theme_pink">Theme pink</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_translate_anywhere_desc">Translate any word any where by copy it or select the word and then click \'translate\' button</string>
    <string name="pref_translate_anywhere">Translate anywhere</string>
    <string name="pref_save_translations">Save translated words</string>
    <string name="pref_save_translations_desc">Save a history of copied and translated words in application and then by opening \'History activity\' you\'ll be able to add them to your learn list or simply delete them</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_desc">Change the main color of the application</string>
    <string name="general_settings">General</string>
    <string name="pref_learn_goal">Correct asnwer goal</string>
    <string name="pref_learn_goal_desc">The word will be marked as learned if you answer correctly the question about that word more than your goal</string>
    <string name="pref_allow_reminder_notifications">Allow reminder notifications</string>
    <string name="notification_cycle_desc">The delay between notifications sent by application</string>
    <string name="pref_smart_notification_time">Smart notifications</string>
    <string name="pref_smart_notification_time_desc">Based on usage of your phone application picks best times to send reminder notifications.\nLearn process may be few days due to learning procecure</string>
    <string name="pref_notification_sound">Sound</string>
    <string name="pref_notification_vibration">Vibrate</string>
    <string name="notification_settings_desc">After android 8.0 we don\'t have access to notifications settings and you must change settings from android settings</string>
    <string name="card_stack_view">Card stack view</string>
    <string name="card_stack_view_desc">📱Tinder like swipeable card view for Android</string>
    <string name="circle_picker">Circle picker</string>
    <string name="circle_picker_desc">CirclePicker is an alternative to the built-in NumberPicker view in Android. It provides an easy to use, easy to customize widget with a modern look and feel.</string>
    <string name="google">Google</string>
    <string name="google_desc">Google is an American multinational technology company that specializes in Internet-related services and products, which include online advertising technologies, search engine, cloud computing, software, and hardware.</string>
    <string name="volley">Volley</string>
    <string name="volley_desc">Volley is an HTTP library that makes networking for Android apps easier and, most importantly, faster.  For more information about Volley and how to use it, visit the Android developer training page.\nhttps://developer.android.com/training/volley/index.html</string>
    <string name="sticky_nested_scroll_view">Sticky nested scroll view</string>
    <string name="sticky_nested_scroll_view_desc">A small android library for tagging views inside a ScrollView as \"sticky\" making them stick to the top of the scroll container until a new sticky view comes and takes it\'s place</string>
    <string name="material_intro_screen">Material intro screen</string>
    <string name="material_intro_screen_desc">Material intro screen is inspired by Material Intro and developed with love from scratch. I decided to rewrite completely almost all features in order to make Android intro screen easy to use for everyone and extensible as possible.</string>
    <string name="crashlythics">Crashlytics</string>
    <string name="crashlythics_desc">The most powerful, yet lightest weight crash reporting solution.</string>
    <string name="mitra">Mitra Lashkary</string>
    <string name="mitra_desc">The designer of notifictionary</string>
    <string name="pref_learn_goal_hint">Enter your goal</string>
    <string name="pref_cycle_hint">delay between notifications(minutes)</string>
    <string name="title_license_app">Notifictionary License</string>
    <string name="description_licence_app">This app will use your phone usage information and responsed that gains from you for educational and financial purposes.\nTo use this app you have to accept this.</string>
    <string name="accept">Accept</string>
    <string name="exit">Exit</string>
</resources>