<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_settings">

        <EditTextPreference
            android:defaultValue="5"
            android:hint="@string/pref_learn_goal_hint"
            android:icon="@mipmap/ic_goal"
            android:inputType="number"
            android:key="pref_learn_goal"
            android:layout="@layout/setting_goal"
            android:summary="@string/pref_learn_goal_desc"
            android:title="@string/pref_learn_goal" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@mipmap/ic_goal"
            android:key="pref_translate_anywhere"
            android:layout="@layout/setting_translate_anywhere"
            android:summary="@string/pref_translate_anywhere_desc"
            android:title="@string/pref_translate_anywhere" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@mipmap/ic_save"
            android:key="pref_save_translates"
            android:layout="@layout/setting_save_translated_words"
            android:summary="@string/pref_save_translations_desc"
            android:title="@string/pref_save_translations" />


        <ir.shahinsoft.notifictionary.prefrences.SeekbarPrefrence
            android:key="pref_speech_speed"
            android:layout="@layout/setting_speech_speed" />


        <Preference
            android:icon="@mipmap/ic_rgb"
            android:inputType="none"
            android:key="pref_theme"
            android:layout="@layout/setting_theme"
            android:summary="@string/pref_theme_desc"
            android:title="@string/pref_theme" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification_settings">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@mipmap/ic_notification"
            android:key="notifications_new_message"
            android:layout="@layout/setting_notification"
            android:title="@string/pref_allow_reminder_notifications" />

        <EditTextPreference
            android:defaultValue="20"
            android:dependency="notifications_new_message"
            android:hint="@string/pref_cycle_hint"
            android:icon="@mipmap/ic_cycle"
            android:inputType="number"
            android:key="pref_notification_cycle"
            android:layout="@layout/setting_cycle"
            android:maxLength="3"
            android:summary="@string/notification_cycle_desc"
            android:title="@string/notification_cycle" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:icon="@mipmap/ic_artificial_intelligence"
            android:layout="@layout/setting_smart"
            android:key="pref_smart_notifications"
            android:summary="@string/pref_smart_notification_time_desc"
            android:title="@string/pref_smart_notification_time" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:icon="@mipmap/ic_sound"
            android:key="pref_notification_sound"
            android:layout="@layout/setting_sound"
            android:title="@string/pref_notification_sound" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:icon="@mipmap/ic_vibrate"
            android:key="pref_notification_vibration"
            android:title="@string/pref_notification_vibration" />
        <Preference
            android:enabled="false"
            android:icon="@mipmap/ic_settings"
            android:key="android_settings"
            android:layout="@layout/setting_notification_setting"
            android:summary="@string/notification_settings_desc"
            android:title="@string/notification_settings" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/license">
        <Preference
            android:summary="@string/card_stack_view_desc"
            android:title="@string/card_stack_view">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/yuyakaido/CardStackView" />

        </Preference>

        <Preference
            android:summary="@string/circle_picker_desc"
            android:title="@string/circle_picker">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/bugadani/CirclePicker" />
        </Preference>

        <Preference
            android:summary="@string/google_desc"
            android:title="@string/google">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/google" />
        </Preference>

        <Preference
            android:summary="@string/volley_desc"
            android:title="@string/volley">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/google/volley" />
        </Preference>

        <Preference
            android:summary="@string/sticky_nested_scroll_view_desc"
            android:title="@string/sticky_nested_scroll_view">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/didikk/sticky-nestedscrollview" />
        </Preference>

        <Preference
            android:summary="@string/material_intro_screen_desc"
            android:title="@string/material_intro_screen">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/TangoAgency/material-intro-screen" />
        </Preference>

        <Preference
            android:summary="@string/crashlythics_desc"
            android:title="@string/crashlythics">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/crashlytics" />
        </Preference>

        <Preference
            android:summary="@string/mitra_desc"
            android:title="@string/mitra">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:mitra.l76@gmail.com" />
        </Preference>
    </PreferenceCategory>


</PreferenceScreen>