<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/secondary_text_color"
    tools:context=".activities.AboutActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ir.shahinsoft.notifictionary.widget.AppTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:padding="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:font_name="bold" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/close_about_activity"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_close_black_24dp"
            android:tint="@color/white" />
    </FrameLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:lottie_fileName="about.json"
        android:padding="16dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ir.shahinsoft.notifictionary.widget.AppTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/about_us_desc"
        android:textColor="@color/white"
        app:font_name="light" />

    <ir.shahinsoft.notifictionary.widget.AppTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contact_to_developer"
        android:textColor="@color/white"
        app:font_name="bold" />

    <ir.shahinsoft.notifictionary.widget.AppTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/social_media"
        android:textColor="@color/white"
        app:font_name="medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/telegram"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/telegram_account"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_telegram" />

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/instagram_account"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_instagram" />

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/twitter_account"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/gmail"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/gmail_account"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_gmail" />

    </LinearLayout>
</LinearLayout>