<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ir.shahinsoft.notifictionary.widget.AppTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title_license_app"
        app:font_name="light"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <ir.shahinsoft.notifictionary.widget.AppTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/description_licence_app"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">
        <ir.shahinsoft.notifictionary.widget.AppButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:id="@+id/accept"
            android:background="@color/transparent"
            android:layout_margin="8dp"
            android:text="@string/accept" />

        <ir.shahinsoft.notifictionary.widget.AppButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/exit"
            android:background="@color/transparent"
            android:text="@string/exit"
            android:textColor="@color/red"/>
    </LinearLayout>

</LinearLayout>