<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <ir.shahinsoft.notifictionary.widget.AppTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title_duplicated"
        android:textColor="#000"
        app:font_name="bold" />

    <ir.shahinsoft.notifictionary.widget.AppTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingRight="16dp"
        android:text="@string/description_duplicated" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ir.shahinsoft.notifictionary.widget.AppButton
            android:id="@+id/no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_button_default"
            android:layout_margin="8dp"
            android:text="@string/no"
            android:textColor="@color/white" />

        <ir.shahinsoft.notifictionary.widget.AppButton
            android:id="@+id/yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:text="@string/yes"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>